# asset-tap

./: .editorconfig  .editorconfig-checker.json  .env.example  .gitattributes  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CNAME  Cargo.toml  Makefile  README.md  cliff.toml  dprint.json  index.html  robots.txt  search_index.en.js  site.webmanifest  sitemap.xml
.claude/: settings.json
.config/: nextest.toml
.github/: CODEOWNERS  dependabot.yaml  dependabot.yml
.github/actions/build-and-package/: action.yaml
.github/actions/get-version/: action.yaml
.github/actions/test-coverage/: action.yaml
.github/workflows/: ci.yaml  release.yaml  site.yaml
bundles/asset-tap/: bundle.json
cli/: Cargo.toml
cli/src/: main.rs
core/: Cargo.toml
core/benches/: benchmarks.rs
core/src/: bundle.rs  config.rs  config_sync.rs  config_version.rs  convert.rs  error_log.rs  glb_webp.rs  history.rs  lib.rs  pipeline.rs  progress_fmt.rs  settings.rs  state.rs  types.rs
core/src/api/: mod.rs
core/src/api/mock/: fixtures.rs  generic_handlers.rs  mod.rs  server.rs
core/src/constants/: errors.rs  files.rs  http.rs  mod.rs  polling.rs  validation.rs
core/src/providers/: config.rs  discovery.rs  discovery_cache.rs  dynamic_provider.rs  http_client.rs  mod.rs  openapi.rs  registry.rs  traits.rs
core/src/templates/: config.rs  interpolation.rs  mod.rs  registry.rs
core/tests/: discovery_tests.rs  file_io_tests.rs  integration_tests.rs  mock_server_tests.rs  pipeline_execution_tests.rs  provider_contracts.rs
docs/: DEVELOPMENT.md  PACKAGING.md  README.md  index.html
docs/architecture/: MOCK_MODE.md  PROVIDERS.md
docs/benchmarks/: 2026-02-28.md
docs/bundle-structure/: index.html
docs/cli-usage/: index.html
docs/getting-started/: index.html
docs/guides/: BUNDLE_STRUCTURE.md  PROVIDER_SCHEMA.md
docs/installation/: index.html
docs/providers/: index.html
docs/test-checklist/: index.html  server.rs
docs/using-asset-tap/: index.html
download/: index.html
gui/: Cargo.toml  build.rs
gui/src/: app.rs  constants.rs  icons.rs  main.rs  style.rs  texture_cache.rs
gui/src/viewer/: glb_webp.rs  mod.rs  model.rs
gui/src/views/: about.rs  bundle_info.rs  confirmation_dialog.rs  image_approval.rs  library.rs  mod.rs  preview.rs  progress.rs  settings.rs  sidebar.rs  template_editor.rs  walkthrough.rs  welcome_modal.rs
js/: search.js
providers/: README.md  fal-ai.yaml  meshy.yaml
scripts/: build-macos-universal.sh  package-linux.sh  package-macos.sh  package-windows.sh  test_cli.sh
search/: index.html
site/: config.toml
site/content/: _index.md  download.md
site/content/docs/: _index.md  bundle-structure.md  cli-usage.md  getting-started.md  installation.md  providers.md  using-asset-tap.md
site/templates/: base.html  docs-list.html  docs-page.html  download.html  index.html
site/themes/zap/templates/: index.html
site/themes/zap/templates/macros/: head.html  hooks.html  images.html
site/themes/zap/templates/shortcodes/: spotify.html  thumbnail.html
tags/: index.html
tags/guide/: index.html
tags/providers/: index.html
tags/reference/: index.html
templates/: humanoid.yaml
