[workspace]
resolver = "2"
members = ["cli", "core", "gui"]

[workspace.package]
version = "26.4.2"
authors = ["Night and Wknd"]
categories = ["multimedia", "graphics", "command-line-utilities"]
edition = "2024"
homepage = "https://assettap.dev"
keywords = ["3d", "ai", "text-to-3d", "asset-generation", "blender"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/nightandwknd/asset-tap"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client - unified approach for all API calls
reqwest = { version = "0.12", features = ["json", "multipart", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Utilities
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
walkdir = "2"
which = "7"

# Env loading
dotenvy = "0.15"

# CLI
clap = { version = "4", features = ["derive"] }
indexmap = "2"

# GUI (egui 0.33 uses glow 0.16, matching three-d master)
eframe = { version = "0.33", features = ["default_fonts", "glow"] }
egui = "0.33"
egui_extras = { version = "0.33", features = ["all_loaders"] }

# 3D rendering (git master for glow 0.16 compat; three-d pins egui 0.32 but shares glow 0.16)
gltf = { version = "1.4", features = ["KHR_materials_unlit", "extras"] }
three-d = { git = "https://github.com/asny/three-d", rev = "da7cef6c5e17" }
three-d-asset = { version = "0.10", features = ["gltf", "image"] }

# OpenGL context (must match eframe's glow version)
glow = "0.16"

# Phosphor icons for GUI (0.11 targets egui 0.33)
egui-phosphor = { version = "0.11", default-features = false, features = ["regular"] }

# File dialogs
rfd = "0.15"

# Image handling
image = { version = "0.25", features = ["webp"] }

# Open files/URLs in default application
open = "5"

# Async utilities
async-trait = "0.1"
futures = "0.3"

# Archive
zip = { version = "2", default-features = false, features = ["deflate"] }

# Tracing/logging
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Patch: three-d-asset 0.10 not yet published on crates.io
[patch.crates-io]
three-d-asset = { git = "https://github.com/asny/three-d-asset", rev = "edbc5d8f" }

[profile.release]
strip = true
lto = true
codegen-units = 1
